# claude-code-provider-balancer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  config-test.yaml  config.example.yaml  config.yaml  debug_config.py  docker-compose.dev.yml  docker-compose.yml  providers.example.yaml  providers.passthrough.example.yaml  pyproject.toml  pytest.ini  test_broadcast_disconnect.py  test_dedup_only.py  test_midstream_duplicate.py  test_streaming_disconnect.py  tmp_anthropic_stream.py
.claude/: settings.local.anyrouter.json
.github/: README_ACTIONS.md
docs/: LOG_COLORS.md  PROJECT_STATUS.md  architecture-diagrams.md  claude_code_oauth_integration.md  error-classification-mechanism.md  idle_recovery_interval.md  intelligent-routing-architecture.md  mapping.md  passthrough-mode.md  provider-cooldown-mechanism.md  request-processing-flow.md  streaming-requirements.md  token_refresh_guide.md  zed-provider-support.md
scripts/: queryLog.py
src/: main.py  main_original.py  oauth_manager.py  provider_manager.py  token_refresher.py
tests/: MIGRATION_PROGRESS.md  MOCK_SERVER_USAGE.md  README.md  REFACTOR_PLAN.md  REVIEW.md  config-test.yaml  conftest.py  mock_templates.py  openai_mock_issue.md  run_all_tests.py  run_mock_server.py  run_tests.py  test_api.py  test_authentication.py  test_balancer_comprehensive.py  test_caching_deduplication.py  test_client_disconnect.py  test_config.py  test_content_handling.py  test_conversion.py  test_core_functionality.py  test_duplicate_request_handling.py  test_error_handling.py  (+27 more)
(+90 files in other folders)
