[project]
name = "claude-code-provider-balancer"
version = "0.1.0"
description = "Proxy that translates between Anthropic API and OpenAI/LiteLLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "uvicorn>=0.34.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.68.2",
    "pydantic-settings>=2.8.1",
    "tiktoken>=0.9.0",
    "pyyaml>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-mock>=3.14.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-sugar>=1.0.0",
    "respx>=0.22.0",
    "ruff>=0.11.2",
    "mypy>=1.15.0",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint.isort]
known-first-party = ["claude_proxy"]

[tool.mypy]
strict = true
ignore_missing_imports = true
plugins = ['pydantic.mypy']
